# fun_motion_detector

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  modules.html  motion_detector.html  motion_detector.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  motion_detector.doctree
.github/workflows/: python-ci.yml
_sources/: index.rst.txt  modules.rst.txt  motion_detector.rst.txt
docs/: tutorial.md
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  motion_detector.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  motion_detector.doctree
docs/source/: conf.py
tests/: test_motion_detection.py
