[tool.poetry]
name = "project"
version = "0.1.0"
description = "Motion detection using OpenCV and Python"
authors = ["heflavie <niniehebral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
