[tool.poetry]
name = "project"
version = "0.1.0"
description = "Motion detection using OpenCV and Python"
authors = ["heflavie <niniehebral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
git-changelog = "^2.0"  # Ajoute cette ligne pour git-changelog
numpy = "^2.1.3"
#opencv-python = "^4.10.0.84"
opencv-python-headless = "^4.5.0"
bandit = "^1.7.4"       # Vérifie les problèmes de sécurité


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^23.9.20" # Détecte les code smells
pre-commit = "^3.5.3"
sphinx = "^6.0"

[tool.flake8]
max-line-length = 120  # Allow slightly longer lines for better readability
exclude = ['.venv', 'build', 'dist']  # Exclude virtual environments and build folders
ignore = ['E203', 'E501', 'W503']  # Ignore some common issues for readability and compatibility
show-source = true  # Display the problematic line with the error
statistics = true  # Show summary statistics of errors


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
